--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 							Developers Data </a></h2>
 					<p>(for year 2020)</p>
 					<p>In this project I have analysed Stackoverflow Developers Data for the year 2020.
-						the Analysis done in this project is using python. Where I used libraries like Pandas, NumPy,
-						Matplotlib and Seaborn
+						The Analysis is done using python. Where I used libraries like Pandas, NumPy,
+						Matplotlib and Seaborn.
 						First I cleaned the data using python's library called Pandas.
-						Then I took some data and plot some graphs using matplotlib and Seaborn.
+						Then I plot some graphs using matplotlib and Seaborn.
 					</p>
 				</header>
 				<a href="https://github.com/SunidhiSamant/Stackoverflow-Developers-Survey-2020" class="image main"
@@ -73,7 +73,7 @@
 					<a href="https://github.com/SunidhiSamant/Titanic-Disaster-Dataset" class="image fit"
 						style="box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1), 0 8px 20px 0 rgba(0, 0, 0, 0.2)"><img
 							src="images/image2.jpg" alt="" /></a>
-					<p>In this project I basically analyzed titanic passenger info to get insights about their age,
+					<p>In this project, I basically analyzed titanic passenger info to get insights about their age,
 						gender, ticket type, siblings etc. To use SQL in Jupyter Notebook I have used pandasql.
 					</p>
 					<ul class="actions special">
@@ -104,7 +104,7 @@
 					<a href="https://github.com/SunidhiSamant/Covid-Data-Exploration" class="image fit"
 						style="box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1), 0 8px 20px 0 rgba(0, 0, 0, 0.2)"><img
 							src="images/image4.jpg" alt="" /></a>
-					<p>In this project we use SQL Server to explore global COVID 19 data..</p>
+					<p>In this project we use SQL Server to explore global COVID 19 data.</p>
 					<ul class="actions special">
 						<li><a href="https://github.com/SunidhiSamant/Covid-Data-Exploration" class="button">View
 								project</a></li>
